name:                hangman
version:             0.1.0.0
synopsis:            Playing hangman
description:         Please see README.md
homepage:            https://github.com/odsogunro/hangman
license:             BSD3
license-file:        LICENSE
author:              odsogunro: dami kazeem
maintainer:          dami.kazeem@gmail.com
copyright:           2016 dami kazeem
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
